feat: Update credits and upgrade rand to 0.9
Credits:
- Added Jack Ford as creator: "Turned procrastination into a game mechanic"
- Added The Pattycake Mafia to Special Thanks: "Endured pre-alpha trauma with suspicious enthusiasm"

Dependencies:
- Upgraded rand from 0.8 to 0.9
- Fixed deprecated thread_rng() API usage
- Configured getrandom for WASM builds with wasm_js backend
- Added rustflags configuration for wasm32-unknown-unknown target
- Updated CI workflow to support WASM builds with rand 0.9

All builds (native and WASM) now compile without warnings or errors.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -177,4 +177,6 @@ jobs:
         run: sudo apt-get update; sudo apt-get install --no-install-recommends libasound2-dev libudev-dev libwayland-dev
 
       - name: Check web
+        env:
+          RUSTFLAGS: ${{ env.RUSTFLAGS }} --cfg getrandom_backend="wasm_js"
         run: cargo check --config 'profile.web.inherits="dev"' --profile ci --no-default-features --features dev --target wasm32-unknown-unknown
