fix: Eliminate double-nesting in web bundle packaging (v0.0.8)
- Modified packaging step to handle web builds differently
- For web platform, cd into directory and zip contents directly
- This creates proper structure: paddlegeddon/index.html
- Fixes itch.io deployment by removing extra nesting layer
- Bumped version to 0.0.8

The web bundle now has the correct structure for itch.io HTML5 games.

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -304,6 +304,9 @@ jobs:
           if [ '${{ matrix.platform }}' = 'macos' ]; then
             ln -s /Applications .
             hdiutil create -fs HFS+ -volname '${{ env.app_package_name }}' -srcfolder . '${{ env.package }}'
+          elif [ '${{ matrix.platform }}' = 'web' ]; then
+            # For web, zip the contents of the directory, not the directory itself
+            cd '${{ env.app_package_name }}' && zip --recurse-paths '../${{ env.package }}' .
           else
             zip --recurse-paths '${{ env.package }}' '${{ env.app_package_name }}'
           fi
