--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "paddlegeddon"
 authors = ["Mike Sandman <mike@thesandmans.com>"]
-version = "0.0.9"
+version = "0.0.10"
 edition = "2024"
 
 [dependencies]
 bevy = { version = "0.16", features = ["wayland"] }
+avian2d = "0.3"
 rand = "0.9"
 # Compile low-severity logs out of native builds for performance.
 log = { version = "0.4", features = [
