feat: Implement bevy_enhanced_input for keyboard controls
- Replace template MovementController with proper action-based input
- Use Cardinal presets for WASD and arrow key movement
- Consolidate input handling in player.rs
- Remove unused movement.rs and touch.rs files
- Set up for future 2D movement expansion beyond Pong

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 
 [dependencies]
 bevy = { version = "0.16", features = ["wayland"] }
+bevy_enhanced_input = "0.15"
 avian2d = "0.3"
 rand = "0.9"
 # Compile low-severity logs out of native builds for performance.
