fix: Update CI to use bevy CLI from main with proper nightly
- Switch CI to nightly-2025-06-26 (same as bevy CLI)
- Use bevy_lint@main instead of outdated v0.3.0
- Remove continue-on-error workaround now that let_chains is supported

This fixes the bevy_lint compatibility with Rust 2024 edition features.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,7 +15,7 @@ env:
   RUSTFLAGS: -Dwarnings
   RUSTDOCFLAGS: -Dwarnings
   # Use the same Rust toolchain across jobs so they can share a cache.
-  toolchain: stable
+  toolchain: nightly-2025-06-26
 
 jobs:
   # Check formatting.
@@ -98,13 +98,12 @@ jobs:
     name: Bevy lints
     runs-on: ubuntu-latest
     timeout-minutes: 20
-    continue-on-error: true
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Install Rust toolchain (plus bevy_lint)
-        uses: TheBevyFlock/bevy_cli/bevy_lint@lint-v0.3.0
+        uses: TheBevyFlock/bevy_cli/bevy_lint@main
 
       - name: Restore Rust cache
         id: cache
