fix: Update release workflow to use same nightly toolchain as CI
Use nightly-2025-06-26 in release workflow to match CI configuration.
This ensures consistent builds and avoids potential issues where code
passes CI but fails during release builds.

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -208,8 +208,9 @@ jobs:
 
       - name: Install Rust toolchain
         if: ${{ env.is_platform_enabled == 'true' }}
-        uses: dtolnay/rust-toolchain@stable
+        uses: dtolnay/rust-toolchain@nightly
         with:
+          toolchain: nightly-2025-06-26
           targets: ${{ matrix.targets }}
 
       - name: Restore Rust cache
